--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PC-HP\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=C:\\Users\\DANG GIA BAO\\AppData\\Roaming\\NetBeans\\21\\build.properties
