--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyBanVeXemPhim
 excludes=
+file.reference.mysql-connector-java-8.0.30.jar=D:\\Download\\jar_files\\mysql-connector-java-8.0.30.jar
+file.reference.protobuf-java-3.19.4.jar=D:\\Download\\jar_files\\protobuf-java-3.19.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.protobuf-java-3.19.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
