--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,9 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyBanVeXemPhim
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.mysql-connector-java-8.0.30.classpath}:\
+    ${libs.protobuf-java-3.19.4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
