--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
     ${libs.miglayout-4.0.classpath}:\
-    ${libs.TimingFramework-0.55.jar.classpath}
+    ${libs.TimingFramework-0.55.jar.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
