--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
     ${libs.miglayout-4.0.classpath}:\
     ${libs.TimingFramework-0.55.jar.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.mysql-connector-java-8.0.30.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
