--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,19 @@ dist.jlink.output=${dist.jlink.dir}/QuanLyBanVeXemPhim
 endorsed.classpath=
 excludes=
 file.reference.miglayout-4.0.jar=C:\\Users\\PC-HP\\miglayout-4.0.jar
+file.reference.miglayout-core-5.2.jar=src\\com\\raven\\lib\\miglayout-core-5.2.jar
+file.reference.miglayout-swing-5.2.jar=src\\com\\raven\\lib\\miglayout-swing-5.2.jar
+file.reference.mysql-connector-java-8.0.30.jar=src\\com\\raven\\lib\\mysql-connector-java-8.0.30.jar
+file.reference.protobuf-java-3.19.4.jar=src\\com\\raven\\lib\\protobuf-java-3.19.4.jar
+file.reference.TimingFramework-0.55.jar=src\\com\\raven\\lib\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    <<<<<<< HEAD:\
-    ${libs.miglayout-4.0.classpath}:\
-    ${libs.TimingFramework-0.55.jar.classpath}
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.miglayout-core-5.2.jar}:\
+    ${file.reference.miglayout-swing-5.2.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.protobuf-java-3.19.4.jar}
     ${libs.mysql-connector-java-8.0.30.classpath}:\
     ${libs.protobuf-java-3.19.4.classpath}
 =======
