--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyBanVeXemPhim
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\PC-HP\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.miglayout-4.0.jar=C:\\Users\\PC-HP\\miglayout-4.0.jar
 file.reference.miglayout-core-5.2.jar=src\\com\\raven\\lib\\miglayout-core-5.2.jar
 file.reference.miglayout-swing-5.2.jar=src\\com\\raven\\lib\\miglayout-swing-5.2.jar
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.miglayout-core-5.2.jar}:\
     ${file.reference.miglayout-swing-5.2.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.protobuf-java-3.19.4.jar}
+    ${file.reference.protobuf-java-3.19.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
     ${libs.mysql-connector-java-8.0.30.classpath}:\
     ${libs.protobuf-java-3.19.4.classpath}
 =======
