--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyBanVeXemPhim
 endorsed.classpath=
 excludes=
+file.reference.DJNativeSwing-SWT.jar=D:\\Download\\DJNativeSwing-SWT-1-0-3-20230306\\DJNativeSwing-SWT.jar
+file.reference.DJNativeSwing.jar=D:\\Download\\DJNativeSwing-SWT-1-0-3-20230306\\DJNativeSwing.jar
 file.reference.jcalendar-1.4.jar=D:\\Download\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.miglayout-4.0.jar=C:\\Users\\PC-HP\\miglayout-4.0.jar
 file.reference.miglayout-core-5.2.jar=src\\com\\raven\\lib\\miglayout-core-5.2.jar
 file.reference.miglayout-swing-5.2.jar=src\\com\\raven\\lib\\miglayout-swing-5.2.jar
 file.reference.mysql-connector-java-8.0.30.jar=src\\com\\raven\\lib\\mysql-connector-java-8.0.30.jar
 file.reference.protobuf-java-3.19.4.jar=src\\com\\raven\\lib\\protobuf-java-3.19.4.jar
+file.reference.swt-4.24-win32-win32-x86_64.jar=D:\\Download\\DJNativeSwing-SWT-1-0-3-20230306\\lib\\swt\\swt-4.24-win32-win32-x86_64.jar
 file.reference.TimingFramework-0.55.jar=src\\com\\raven\\lib\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
@@ -50,7 +53,10 @@ javac.classpath=\
     ${file.reference.miglayout-swing-5.2.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
     ${file.reference.protobuf-java-3.19.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.DJNativeSwing-SWT.jar}:\
+    ${file.reference.DJNativeSwing.jar}:\
+    ${file.reference.swt-4.24-win32-win32-x86_64.jar}
     ${libs.mysql-connector-java-8.0.30.classpath}:\
     ${libs.protobuf-java-3.19.4.classpath}
 =======
