--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ excludes=
 file.reference.activation-1.1.jar=C:\\Users\\PC-HP\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\activation-1.1.jar
 file.reference.javax.mail.jar=C:\\Users\\PC-HP\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\PC-HP\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\PC-HP\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\jcalendar-1.4.jar
 file.reference.miglayout-4.0.jar=C:\\Users\\PC-HP\\miglayout-4.0.jar
 file.reference.miglayout-core-5.2.jar=src\\com\\raven\\lib\\miglayout-core-5.2.jar
 file.reference.miglayout-swing-5.2.jar=src\\com\\raven\\lib\\miglayout-swing-5.2.jar
@@ -54,7 +55,8 @@ javac.classpath=\
     ${file.reference.protobuf-java-3.19.4.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.activation-1.1.jar}
+    ${file.reference.activation-1.1.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
     ${libs.mysql-connector-java-8.0.30.classpath}:\
     ${libs.protobuf-java-3.19.4.classpath}
 =======
