--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.DJNativeSwing-SWT.jar=D:\\Download\\DJNativeSwing-SWT-1-0-3-20230
 file.reference.DJNativeSwing.jar=D:\\Download\\DJNativeSwing-SWT-1-0-3-20230306\\DJNativeSwing.jar
 file.reference.javax.mail.jar=src\\com\\raven\\lib\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=D:\\Download\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\PC-HP\\OneDrive\\Ta\u0300i li\u00ea\u0323u\\jcalendar-1.4.jar
 file.reference.miglayout-4.0.jar=C:\\Users\\PC-HP\\miglayout-4.0.jar
 file.reference.miglayout-core-5.2.jar=src\\com\\raven\\lib\\miglayout-core-5.2.jar
 file.reference.miglayout-swing-5.2.jar=src\\com\\raven\\lib\\miglayout-swing-5.2.jar
@@ -58,7 +59,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     <<<<<<< HEAD (cf8ac21) - update dat ve:\
     ${file.reference.activation-1.1.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
     ${file.reference.DJNativeSwing-SWT.jar}:\
     ${file.reference.DJNativeSwing.jar}:\
     ${file.reference.swt-4.24-win32-win32-x86_64.jar}
